test_regress/t/t_assert_rep_bad_count.out
%Error: t/t_assert_rep_bad_count.v:14:42: Repetition count is not an elaboration-time constant (IEEE 1800-2023 16.9.2)
                                        : ... note: In instance 't'
   14 |   assert property (@(posedge clk) a[->n] |-> b)
      |                                          ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error-UNSUPPORTED: t/t_assert_rep_bad_count.v:18:42: Unsupported: zero repetition count (IEEE 1800-2023 16.9.2)
                                                    : ... note: In instance 't'
   18 |   assert property (@(posedge clk) a[->0] |-> b)
      |                                          ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: t/t_assert_rep_bad_count.v:22:43: Repetition count must be non-negative (IEEE 1800-2023 16.9.2)
                                        : ... note: In instance 't'
   22 |   assert property (@(posedge clk) a[->-1] |-> b)
      |                                           ^~~
%Error: t/t_assert_rep_bad_count.v:28:41: Repetition count is not an elaboration-time constant (IEEE 1800-2023 16.9.2)
                                        : ... note: In instance 't'
   28 |   assert property (@(posedge clk) a[=n] |-> b)
      |                                         ^~~
%Error-UNSUPPORTED: t/t_assert_rep_bad_count.v:32:41: Unsupported: zero repetition count (IEEE 1800-2023 16.9.2)
                                                    : ... note: In instance 't'
   32 |   assert property (@(posedge clk) a[=0] |-> b)
      |                                         ^~~
%Error: t/t_assert_rep_bad_count.v:36:42: Repetition count must be non-negative (IEEE 1800-2023 16.9.2)
                                        : ... note: In instance 't'
   36 |   assert property (@(posedge clk) a[=-1] |-> b)
      |                                          ^~~
%Error: Exiting due to
